welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:8: error: ';' expected but '[' found.
}[/!]
 ^Program:12: error: Unmatched closing brace '}' ignored here
}
^